Try implement `Ice100`
Our unification procedure is not strong enough. It lacks:
- The ability to express non-homogeneous recursive types, eg. constructs
  that can only appear at toplevel.
- The ability to check side conditions.

They can be alleviated by using a more redundant encoding of the types, however.

--- a/ice1000.cabal
+++ b/ice1000.cabal
@@ -32,6 +32,7 @@ executable ice1000
         Typecheck
 
     default-extensions:
+        TemplateHaskell,
         DeriveTraversable,
         DeriveGeneric,
         GeneralizedNewtypeDeriving,
