--- a/ice1000.cabal
+++ b/ice1000.cabal
@@ -45,7 +45,6 @@ executable ice1000
     build-depends:
         base ^>=4.14.3.0,
         bifunctors,
-        transformers,
-        containers
+        transformers
     hs-source-dirs:   app
     default-language: Haskell2010
